--- a/app/src/main/res/layout/activity_toein_measure.xml
+++ b/app/src/main/res/layout/activity_toein_measure.xml
@@ -142,6 +142,57 @@
                 android:src="@mipmap/cursor" />
         </LinearLayout>
 
+
+        <!-- T1和T3 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_20"
+                android:text="T1:"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/sp_15" />
+
+
+            <TextView
+                android:id="@+id/text_t1"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_20"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/sp_15" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_20"
+                android:text="T3:"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/sp_15" />
+
+
+            <TextView
+                android:id="@+id/text_t3"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_20"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/sp_15" />
+
+
+
+        </LinearLayout>
+
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
